# xfapitest

./: .travis.yml  README.md  pyproject.toml
tests/: conftest.py  test_core.py
tests/api/: httpbin.py
xf_apitest/: api.py
